--- a/MediaControls/App2/index.html
+++ b/MediaControls/App2/index.html
@@ -15,6 +15,8 @@
         <audio controls loop id="audio2">
             <source src="mixkit-piano-reflections-22.mp3" type="audio/mpeg">
         </audio>    
+
+        <h3><a href="https://example.com/">An out of scope URL for CCT testing</a></h3>        
     </body>
 
     <script src="./app2.js"></script>
