FSA: no-op button

--- a/FileSystemAccess/index.html
+++ b/FileSystemAccess/index.html
@@ -12,9 +12,18 @@
 
     <body>
        <H1>todo content</H1>
+       <button onclick="requestPermissions" id="requestPermsButton">
+        request permissions
+       </button>
     </body>
 
     <script src="./app.js"></script>
+    <script>
+        function requestPermissions() {
+             console.log("requested permissions");
+        }
+
+    </script>
 </html>
 
 <!-- Sources -->
