--- a/FileSystemAccess/index.html
+++ b/FileSystemAccess/index.html
@@ -15,6 +15,9 @@
        <button type="button" onclick="requestPermissions()" id="requestPermsButton">
         request permissions
        </button>
+       <p id="fileContent">
+            NO CONTENT YET
+       </p>
     </body>
 
     <script src="./app.js"></script>
@@ -31,7 +34,7 @@
                 const file = await fileHandle.getFile();
                 const contents = await file.text();
 
-                console.log(contents);
+                document.getElementById("fileContent").innerText(contents);
             });
         }
 
