FSA: set inner html

--- a/FileSystemAccess/index.html
+++ b/FileSystemAccess/index.html
@@ -11,7 +11,6 @@
     </head>
 
     <body>
-       <H1>todo content</H1>
        <button type="button" onclick="requestPermissions()" id="requestPermsButton">
         request permissions
        </button>
@@ -34,7 +33,7 @@
                 const file = await fileHandle.getFile();
                 const contents = await file.text();
 
-                document.getElementById("fileContent").innerText(contents);
+                document.getElementById("fileContent").innerHTML(contents);
             });
         }
 
